--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.90MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-7.40MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-11.92MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: de110f84-a480-438e-80d2-4fa897fdba9a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇨🇳 中国-591.6KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇩🇪 德国-3.28MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
-  - {name: 🇩🇪 德国-3.54MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
+  - {name: 🇭🇰 香港-2.90MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-642.0KB/s(Youtube:不良林), server: 43.129.30.122, port: 26456, type: vmess, uuid: 9b1e163d-6df7-40df-d5ca-97a54bf05c1c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
+  - {name: 🇨🇳 台湾-7.44MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 30912, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
