--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-3.54MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-201.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.63MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.38MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1012.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: sgg.2046.gq, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-16.96MB/s(Youtube:不良林), server: jp1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: jp1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-10.77MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.20MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇭 瑞士-379.3KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-16.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-379.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
